fix webkit svg overflow

--- a/src/assets/scss/components/home/buttons.scss
+++ b/src/assets/scss/components/home/buttons.scss
@@ -5,9 +5,9 @@
     margin: 1em 0.5em;
     position: relative;
     text-align: center;
-    height: 2.7em;
-    line-height: 2.7em;
-    padding: 0 1.89em;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 35px;
     width: 100px;
     min-width: 100px;
     display: inline-block;
