--- a/src/assets/scss/pages/area/_about-us-area.scss
+++ b/src/assets/scss/pages/area/_about-us-area.scss
@@ -38,8 +38,8 @@
         }
 
         svg {
-          width: calc((30vw + 40vh) / 2);
-          height: calc((30vw + 40vh) / 2);
+          width: 300px;
+          height: 300px;
 
           @media (max-width: 800px) {
             & {
@@ -53,7 +53,7 @@
       .text-content {
         @extend %text-box;
         text-align: left;
-        font-size: 1em;
+        font-size: 1.2em;
         position: relative;
       }
     }
